src/main/default/objects/Trigger_Handler_Exception__e/Trigger_Handler_Exception__e.object-meta.xml
<CustomObject>
    <description>Captures information about a trigger handler failing to run</description>
    <label>Trigger Handler Exception</label>
    <pluralLabel>Trigger Handler Exceptions</pluralLabel>
</CustomObject>