src/main/default/objects/Trigger_Handler_Exception__e/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>The message of the thrown exception</description>
    <label>Exception Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>