src/main/default/objects/Trigger_Handler_Exception__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The class type of the Exception logged</description>
    <label>Exception Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>