src/main/default/objects/Trigger_Handler_Exception__e/fields/Handler_Config__c.field-meta.xml
<CustomField>
    <fullName>Handler_Config__c</fullName>
    <description>The current handler config</description>
    <label>Handler Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>