src/main/default/objects/Trigger_Handler_Exception__e/fields/Handler_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Handler_Config_Id__c</fullName>
    <description>Used to retrieve additional information about handler config</description>
    <label>Handler Config Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>