src/main/default/objects/Trigger_Handler_Exception__e/fields/New_Records__c.field-meta.xml
<CustomField>
    <fullName>New_Records__c</fullName>
    <label>New Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>