src/main/default/objects/Trigger_Handler_Exception__e/fields/Old_Records__c.field-meta.xml
<CustomField>
    <fullName>Old_Records__c</fullName>
    <label>Old Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>