src/main/default/objects/Trigger_Handler_Exception__e/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>The number of records executing on</description>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>