src/main/default/objects/Trigger_Handler_Exception__e/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <description>The Type of the SObject the Trigger was running on</description>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>