src/main/default/objects/Trigger_Handler_Exception__e/fields/Trigger_Operation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Operation__c</fullName>
    <description>The TriggerOperation Type</description>
    <label>Trigger Operation</label>
    <length>45</length>
    <type>Text</type>
</CustomField>