src/main/default/objects/Trigger_Handler_Exception__e/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>The user the transaction was running as</description>
    <label>User Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>